--- a/src/components/gradient-button/gradient-button.styles.css
+++ b/src/components/gradient-button/gradient-button.styles.css
@@ -1,5 +1,5 @@
 .gradient-button {
-    background : linear-gradient(to bottom, #7A28CB, #FC60A8);
+    background : linear-gradient(to bottom, #178286, #51DDE1);
     border : 0;
     font-family : 'FuturaBold';
     border-radius : 100px;
