--- a/src/components/gradient-div/gradient-div.styles.css
+++ b/src/components/gradient-div/gradient-div.styles.css
@@ -1,5 +1,5 @@
 .gradient-div {
-    background : linear-gradient(to bottom, #7A28CB, #FC60A8);
+    background : linear-gradient(to bottom, #178286, #51DDE1) #4F4B4B;
     height : 2.5rem;
     border-radius : 10px 10px 0 0;
     font-family : 'FuturaLight'
