--- a/src/App.css
+++ b/src/App.css
@@ -90,3 +90,10 @@
 .clickable {
     cursor : pointer;
 }
+.one-part {
+    flex : 1;
+}
+.black-outline {
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+
