--- a/src/App.css
+++ b/src/App.css
@@ -96,4 +96,13 @@
 .black-outline {
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
+.square {
+    height : 140px;
+    width : 140px;
+    background : #353434;
+}
 
+.icon {
+    height : 32px;
+    width : 32px;
+}
