--- a/src/App.css
+++ b/src/App.css
@@ -106,4 +106,6 @@
     height : 32px;
     width : 32px;
 }
-
+.gradient-teal {
+    background : linear-gradient(to bottom, #178286, #51DDE1) #4F4B4B;
+}
